data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1803.wast
;; 4. **Test Block with Forward `br` Misreference**:    - Implement a block with a forward `br` that wrongly targets an instruction beyond the block’s ending.    - This evaluates the block’s control flow without surpassing its boundary.    - Expected result: WebAssembly should fail due to incorrect forward referencing, but wizard_engine might not detect the error.

(assert_invalid
  (module
    (func $test_forward_br_misreference
      (block (result i32)
        (br 1 (i32.const 42))
        (i32.const 1)
      )
    )
  )
  "invalid branch depth"
)